fix:상품상세페이지 수정